--- a/css/destyle.css
+++ b/css/destyle.css
@@ -229,8 +229,8 @@ input,
 optgroup,
 select,
 textarea {
-  -webkit-appearance: auto; /* 1 */
-  appearance: auto;
+  -webkit-appearance: none; /* 1 */
+  appearance: none;
   vertical-align: middle;
   color: inherit;
   font: inherit;
@@ -332,7 +332,7 @@ textarea {
  */
 
 [type="search"]::-webkit-search-decoration {
-  -webkit-appearance: auto;
+  -webkit-appearance: none;
 }
 
 /**
